crates/dbdict-cli/tests/snapshots/cli__validate_data_rich_reports_d01_through_d04.snap
---
source: crates/dbdict-cli/tests/cli.rs
assertion_line: 380
expression: "sanitize(&stderr, &dict.display().to_string())"
---
error: [D01] A required column must not contain nulls.
  --> <fixture>:14:23
   |
 7 |   - name: trades
...
12 |       - name: qty
13 |         type: BIGINT
14 |         constraints: [required]
   |                       ^^^^^^^^ has 1 null value
error: [D02] A primary key must be unique across rows.
 --> <fixture>:9:15
  |
7 |   - name: trades
8 |     columns:
9 |       - name: id
  |               ^^ has 1 duplicated key value
error: [D03] A unique column must not contain duplicate values.
  --> <fixture>:17:23
   |
 7 |   - name: trades
...
15 |       - name: ref
16 |         type: VARCHAR
17 |         constraints: [unique]
   |                       ^^^^^^ has 1 duplicated value
error: [D04] A foreign key value must exist in the primary key it references.
  --> <fixture>:20:23
   |
 7 |   - name: trades
...
18 |       - name: cat_id
19 |         type: BIGINT
20 |         constraints: [foreign_key]
   |                       ^^^^^^^^^^^ has 1 orphaned value (no match in categories.id)
